--- a/learning_log/20250808.md
+++ b/learning_log/20250808.md
@@ -51,5 +51,5 @@ public static void main(String[] args) {
 - return 값은 objectA가 ClassA의 인스턴스이거나 '하위' 클래스의 인스턴스인 경우 true 아니면 false
 
 
-
+깃허브 추가 인증
 
