--- a/learning_log/20250808.md
+++ b/learning_log/20250808.md
@@ -19,10 +19,17 @@ ex) : 객체명 instanceof 클래스명 -> return true / false
 ### Upcasting
 - 임시적(Implicit)으로 이루어짐
     - 알아서 바뀐다. 근데 언제 알아서 바뀌었는지는 개발자가 알고 있어야 함.
+  
+- 클래스A 객체명 = new 클래스B(); 를 통해 객체를 생성했을 경우
+  1. 오버라이드가 적용된 메서드, 즉 자식 클래스의 메서드가 살행됨
+  2. 클래스B(자식 클래스)의 고유 메서드는 호출 불가능
 
 ### Downcasting
 - 캐스팅은 다형성(Polymorphism)을 구현할 때 사용, 상위 클래스 타입으로 객체를 처리하면서도
 특정 상황에서는 하위 클래스의 고유 기능을 사용 가능
+- 다운캐스팅은 '명시적'으로 이루어져야 합니다.
+- 방법 : (클래스명)객체명; -> (int)2.3; 과 같은 방식이죠. conversion의 객체 버전이라고 생각하시면 됩니다.
+그래서 기본 자료형의 형변환에서 벗어나서 참조 자료형까지 고려하셔야 합니다.
 
 ### 장단점
 - 장점
@@ -51,4 +58,6 @@ public static void main(String[] args) {
 - return 값은 objectA가 ClassA의 인스턴스이거나 '하위' 클래스의 인스턴스인 경우 true 아니면 false
 
 
-추가 확인
+
+## Java에서의 리턴값이 없을 때
+Java의 index 넘버에는 음수값이 없기 때문에 실패를 나타낼 때 -1을 쓰는 경우가 많습니다.
