--- a/learning_log/20250813.md
+++ b/learning_log/20250813.md
@@ -105,4 +105,23 @@ public static void main(String[] args) {
 3. T 또는 T의 슈퍼 타입(부모 클래스)
    - 쓰기 전용. 제한된 타입으로 넣을 때
 
+# Collection
+- 여러 객체를 모아놓은 것들만 의미함 -> 배열과는 좀 차이가 있습니다.
+- 다만 Java에서의 List는 Python 에서의 List와도 차이가 있습니다.
 
+## 종류
+1. List : 순서가 있는 데이터의 집합으로, 중복된 요소를 허락함.
+    - ArrayList : 배열 기반의 리스트, 요소 접근 속도가 빠름.
+    - LinkedList : 연결 리스트, 삽입 / 삭제 속도가 빠름.
+2. Set : 중복을 허용하지 않는(List 와의 차이 # 1) 데이터들의 집합
+    - HashSet : 해시 테이블 기반의 집합, element의 순서를 보장하지 않음.(List 와의 차이 # 2)
+    - TreeSet : 이진(binary) 검색 트리 기반의 집합, 요소가 정렬된 상태로 유지됨.
+3. Map : Key / Value의 쌍으로 이루어진 데이터들의 집합
+    - HashMap : 해시 테이블 기반의 맵, 키의 순서를 보장 X
+    - TreeMap : 이진 검색 트리 기반의 맵, 키가 정렬된 상태로 유지
+* Java 상에서의 키(Key)-값(Value) 상을 지칭하는 용어 : Entry
+* Js(JavaScript) 상에서 객체의 키-값 상을 지칭하는 용어 : Property
+* 근데 문제는 Python 에서의 한국어로 속성을 지칭하는 영문 용어 : Attributes - Java 상에서의 field
+List는 순서가 있고 중복을 허용하는 반면, Set의 경우 순서는 없고 중복은 허용하지 않기 때문에 List -> Set / Set -> List 로의 형변환이 중요합니다. 예를 들어 List로 전체 설문을 받고, Set을 통해 중복을 제거하여 후보군만 남기는 등의 형태로 많이 사용됩니다. 또한 Set 으로 중복을 제거한 후에 다시 List로 돌려서 .get(인덱스넘버)로 조회도 할 수 있습니다. Set은 순서가 없어서 ... 그래서 Set은 집합과 매우 유사하지만 집합은 숫자로만 이루어져있지만 Set은 다양한 자료형을 기준으로 만들어질 수 있다는 차이가 있습니다.
+
+    
